# arch-svc-index

./: README.md
indexer/: Cargo.toml
indexer/src/: desc.rs  main.rs  meili.rs
ui/: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
ui/functions/: tsconfig.json
ui/functions/api/search/: [index].ts
ui/functions/file/services/: [id].ts
ui/public/: index.html
ui/src/: App.tsx  index.css  index.tsx  model.ts  setupProxy.js
ui/src/components/: search-input.tsx
ui/src/pages/package/: index.css  index.tsx
ui/src/pages/unit/: index.css  index.tsx
ui/src/pages/welcome/: index.tsx
