[package]
name = "svc-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "io-util"] }
tokio-util = { version = "0.7.4", default-features = false, features = ["io-util"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tar = "0.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
flate2 = "1.0.25"
anyhow = "1.0.68"
serde = { version = "1.0.152", features = ["derive"] }
bytes = "1.3.0"
zstd = "0.12.2+zstd.1.5.2"
once_cell = "1.17.0"